--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.load_app">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoadApp"
         tools:targetApi="31">
+        <activity
+            android:name=".DetailActivity"
+            android:label="@string/title_activity_detail" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
